# KassowRobotProject

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  debug.py  file.py
config/: config.yaml
docs/: documentation.md
launch/: realsense_kassow.launch
scripts/: setup.sh
src/kassow_realsense_integration/: CMakeLists.txt  package.xml
src/kassow_realsense_integration/launch/: realsense_kassow.launch.py
src/kassow_realsense_integration/src/: main.py
